force-app/main/default/objects/FieloEE__RedemptionItem__c/FieloEE__RedemptionItem__c.object-meta.xml
<CustomObject>
    <description>Items in a redemption order or in an open shopping cart.</description>
    <label>Redemption Item</label>
    <nameField>
        <displayFormat>OI-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redemption Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>