force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__Code__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>