force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__MemberName__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MemberName__c</fullName>
    <description>Formula to get the member name.</description>
    <formula>FieloEE__Redemption__r.FieloEE__Member__r.FieloEE__LastName__c +&quot;, &quot;+ FieloEE__Redemption__r.FieloEE__Member__r.FieloEE__FirstName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Name</label>
    <type>Text</type>
</CustomField>