force-app/main/default/objects/FieloEE__RedemptionItem__c/fields/FieloEE__VoucherLink__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__VoucherLink__c</fullName>
    <description>Formula to link the voucher.</description>
    <formula>HYPERLINK( &apos;./apex/&apos; +  $Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c + &apos;RedemptionItemVoucher?voucherId=&apos; +  Id, $Label.fieloee__voucher )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Link</label>
    <type>Text</type>
</CustomField>